crates/test-ui/ui/not_writeback.stderr
error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: &mut Id<NSObject> = unsafe { msg_send![obj, a] };
  |                                         ^^^^^^^^^^^^^^^^^ the trait `RefEncode` is not implemented for `Id<NSObject>`
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `&mut Id<NSObject>` to implement `Encode`
  = note: required for `&mut Id<NSObject>` to implement `EncodeReturn`
  = note: required for `&mut Id<NSObject>` to implement `EncodeConvertReturn`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |         R: EncodeConvertReturn,
  |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject, objc2::rc::Owned>: Encode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `Encode` is not implemented for `Id<NSObject, objc2::rc::Owned>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `Id<NSObject, objc2::rc::Owned>` to implement `EncodeConvertArgument`
  = note: required for `(Id<NSObject, objc2::rc::Owned>,)` to implement `MessageArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |         A: MessageArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject, objc2::rc::Owned>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: &param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject, objc2::rc::Owned>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `&Id<NSObject, objc2::rc::Owned>` to implement `Encode`
  = note: required for `&Id<NSObject, objc2::rc::Owned>` to implement `EncodeConvertArgument`
  = note: required for `(&Id<NSObject, objc2::rc::Owned>,)` to implement `MessageArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |         A: MessageArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject, objc2::rc::Owned>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: Some(&param)] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject, objc2::rc::Owned>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `&Id<NSObject, objc2::rc::Owned>` to implement `Encode`
  = note: 1 redundant requirement hidden
  = note: required for `Option<&Id<NSObject, objc2::rc::Owned>>` to implement `Encode`
  = note: required for `Option<&Id<NSObject, objc2::rc::Owned>>` to implement `EncodeConvertArgument`
  = note: required for `(Option<&Id<NSObject, objc2::rc::Owned>>,)` to implement `MessageArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |         A: MessageArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `*mut Id<NSObject>` to implement `Encode`
  = note: required for `*mut Id<NSObject>` to implement `EncodeConvertArgument`
  = note: required for `(*mut Id<NSObject>,)` to implement `MessageArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |         A: MessageArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Id<NSObject, objc2::rc::Owned>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Id<NSObject, objc2::rc::Owned>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `&mut Id<NSObject, objc2::rc::Owned>` to implement `RefEncode`
  = note: required for `&mut &mut Id<NSObject, objc2::rc::Owned>` to implement `Encode`
  = note: required for `&mut &mut Id<NSObject, objc2::rc::Owned>` to implement `EncodeConvertArgument`
  = note: required for `(&mut &mut Id<NSObject, objc2::rc::Owned>,)` to implement `MessageArguments`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |         A: MessageArguments,
  |            ^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
